fix project section mobile height

--- a/src/styles/components/project-card.scss
+++ b/src/styles/components/project-card.scss
@@ -12,8 +12,10 @@
 }
   
 .project-cards-container-mobile {
-  margin-left: -1.25rem;
-  margin-right: -1.25rem;
+  height: 512px;
+  overflow: hidden;
+  margin-left: -20px;
+  margin-right: -20px;
   overflow-x: hidden;
 
   @include v.md {
@@ -26,19 +28,24 @@
     height: 200px;
   }
 }
+
+.project-image {
+  object-fit: contain;
+  height: 100%;
+}
   
 .project-card {
-  min-height: 32rem;
-  width: 17rem !important;
-  margin-left: auto !important;
-  margin-right: auto !important;
-  margin-top: 1.25rem;
-  margin-bottom: 2.75rem;  
-
+  width: clamp(45px, 70%, 275px);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 44px;  
+  
   @include v.md {
-    width: 18rem !important;
-    margin-left: 1.25rem !important;
-    margin-right: 1.25rem !important;
+    min-height: 512px;
+    width: 288px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 }
   
