--- a/src/styles/components/skills.scss
+++ b/src/styles/components/skills.scss
@@ -26,7 +26,7 @@
 
 .category-skills-container {
   display: grid;
-  grid-template-columns: auto;
+  grid-template-columns: 1fr;
   justify-content: center;
   align-content: center;
 
