--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -122,7 +122,7 @@ a {
 .main-content {
   word-wrap: break-word;
   text-align: center;
-  padding: 20px 30px;
+  padding: 20px clamp(25px, 12%, 100px);
   font-size: 1rem;
   margin: 0 auto;
 
